more on results of 4a

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -203,7 +203,7 @@ Correspondence concerning this article should be addressed to Hu Chuan-Peng, Sch
 \affiliation{\vspace{0.5cm}\textsuperscript{1} Nanjing Normal University, 210024 Nanjing, China\\\textsuperscript{2} Tsinghua University, 100084 Beijing, China\\\textsuperscript{3} University of Aberdeen, Aberdeen, Scotland}
 
 \abstract{%
-Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction bewteen valence and self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
+Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
 }
 
 
@@ -216,18 +216,18 @@ Moral character is central to social evaluation and moral judgment. However, whe
 
 Is moral information prioritized in perception? This question has evoked much heat a few years ago but remains unsolved. On the one hand, morality is a basic dimension in social evaluation (Dunbar, 2004; Ellemers, 2018; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014), this importance should grant moral information more salient than morally neutral information and thus prioritized when the attentional resource is limited. This logic is similar to other stimuli that are also important to humans, e.g., threatening stimuli (e.g., Ohman, Lundqvist, \& Esteves, 2001), rewards (B. A. Anderson, Laurent, \& Yantis, 2011), or self-related stimuli (Sui \& Rotshtein, 2019). Indeed, previous studies reported bad characters are prioritized in visual processing (E. Anderson, Siegel, Bliss-Moreau, \& Barrett, 2011; Eiserbeck \& Abdel Rahman, 2020), suggesting that bad people are detected faster than neutral or good people. On the other hand, there is evidence against the view that morally bad information is prioritized in perception. First, researchers reported positive bias in processing moral-related information. For example, Shore and Heerey (2013) found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the negative bias in perceiving moral information is not robust (Stein, Grubb, Bertrand, Suh, \& Verosky, 2017). Third, the mechanism underlying the reported negative bias in processing moral-related information is debated (Firestone \& Scholl, 2015, 2016b; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. Here we manipulated the moral character by an associated learning task and investigated whether immediately acquired moral character information is prioritized in a perceptual matching task.
 
-If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism (B. A. Anderson et al., 2011). The positive bias toward moral information, on the other hand, is explained by value-based attention (Shore \& Heerey, 2013). However, these explanations often ignore the fact the value is subjective \emph{per se} (Juechems \& Summerfield, 2019). Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory (Sui \& Humphreys, 2015 for more details; see Sui \& Rotshtein, 2019). Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning is widely used in aversive learning and value-based learning (Atlas et al., 2022; Deltomme, Mertens, Tibboel, \& Braem, 2018). By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence \emph{per se} or by the self-referential of moral valence.
+If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism (B. A. Anderson et al., 2011). The positive bias toward moral information, on the other hand, is explained by value-based attention (Shore \& Heerey, 2013). However, these explanations often ignore the fact the value is subjective \emph{per se} (Juechems \& Summerfield, 2019). Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory (Sui \& Humphreys, 2015; Sui \& Rotshtein, 2019). Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning is widely used in aversive learning and value-based learning (Atlas et al., 2022; Deltomme, Mertens, Tibboel, \& Braem, 2018). By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence \emph{per se} or by the self-referential of moral valence.
 
 We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming (Unkelbach, Alves, \& Koch, 2020), which is the center of the debate on previous results (Firestone \& Scholl, 2015, 2016a; Gantman \& Bavel, 2015, 2016; Jussim et al., 2016). We examined whether participants' performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes --- in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character alone or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
 
 \hypertarget{disclosures}{%
 \section{Disclosures}\label{disclosures}}
 
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60\% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60\% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
 
-All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants in Wenzhou University, Wenzhou, China, in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017 (See Table 1 for overview of these experiments).
+All the experiments reported were not pre-registered. Most experiments (1a \textasciitilde{} 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 at Tsinghua University, Beijing, China. Participants in these experiments were recruited from the local community. To increase the sample size of experiments to 50 or more (Simmons, Nelson, \& Simonsohn, 2013), we recruited additional participants from Wenzhou University, Wenzhou, China, in 2017 for experiments 1a, 1b, 4a, and 4b. Experiment 3b was finished at Wenzhou University in 2017 (See Table 1 for an overview of these experiments).
 
-All participants received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University.
+All participants received informed consent and were compensated for their time. These experiments were approved by the ethics board in the Department of Psychology, Tsinghua University.
 
 \hypertarget{general-methods}{%
 \section{General methods}\label{general-methods}}
@@ -300,7 +300,7 @@ We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mix
 
 We used the \texttt{r} package \texttt{BRMs} (Bürkner, 2017), which used Stan (Carpenter et al., 2017) as the back-end, for the BHM analyses. We estimated the overall effect across experiments that shared the same experimental design using one model, instead of a two-step approach that was adopted in mini-meta-analysis (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model was used to estimate the overall effect of prioritization of good character, which included data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for experiments 3a, 3b, and 6b. Results of individual experiments can be found in the supplementary results. For experiments 4a and 4b, which tested the implicit interaction between the self and good character, we used HBM for each experiment separately.
 
-For questionnaire data, we only reported the subjective distance between different persons or moral character in the supplementary results and did not analyze other questionnaire data, which are described in (Liu et al., 2020).
+For questionnaire data, we only reported the subjective distance between different persons or moral characters in the supplementary results and did not analyze other questionnaire data, which are described in (Liu et al., 2020).
 
 \hypertarget{response-data}{%
 \subsubsection{Response data}\label{response-data}}
@@ -356,7 +356,7 @@ The subjective-specific intercepts (\(\beta_{0j}\)) and slopes (\(\beta_{1j}\)) 
 The formula used for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design, is as follows:
 
 \texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject)\ +\ (Valence*ismatch\ \textbar{}\ ExpID\_new:Subject),\ family\ =\ lognormal()}
-in which \texttt{RT\_sec} is the reaction times data with the second as a unit. The other variables has the same meaning as the response data.
+in which \texttt{RT\_sec} is the reaction times data with the second as a unit. The other variables in this formula have the same meaning as the response data.
 
 For experiments 3a, 3b, and 6b, which have a 2 by 2 by 3 within-subject design, the formula is as follows:
 \texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ ID*Valence\ +\ (ID*Valence\ \textbar{}\ Subject)\ +\ (ID*Valence\ \textbar{}\ ExpID\_new:Subject),\ family\ =\ lognormal()}
@@ -374,12 +374,12 @@ We tested whether moral characters are prioritized by examining the population-l
 \hypertarget{modulation-of-self-referential-processing}{%
 \paragraph{Modulation of self-referential processing}\label{modulation-of-self-referential-processing}}
 
-We tested the modulation effect ofself-referential processing by examining the interaction between moral character and self-referential process for the three-level Bayesian hierarchical model of experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: pure valence effect or the valence effect is modulated by self-referential process. If the former is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. On the other hand, if spontaneous self-referential processing account is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referential conditions.
+We tested the modulation effect of self-referential processing by examining the interaction between moral character and self-referential process for the three-level Bayesian hierarchical model of experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and the self-referential process. If the former is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. On the other hand, if the spontaneous self-referential processing account is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referential conditions.
 
 \hypertarget{spontaneous-binding-between-the-self-and-good-character}{%
 \paragraph{Spontaneous binding between the self and good character}\label{spontaneous-binding-between-the-self-and-good-character}}
 
-For on data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whehter the good character is spontaneously bound with self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words either facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions.
+For data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whether the good character is spontaneously bound with the self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing, e.g., the task-irrelevant moral words either facilitate or slows down the response to self- or other-referential conditions. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -389,7 +389,7 @@ For on data from experiments 4a and 4b, we further examined whether the self-ref
 
 To test whether moral characters are prioritized, we modeled data from experiments 1a, 1b, 1c, 2, 5, and 6a with three-level Bayesian hierarchical models. All these experiments shared similar designs and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiments 1a and 1b, two datasets were collected at different time points and locations, thus we treated them as independent samples. Here we only reported the population-level results of three-level Bayesian models, the detailed results of each experiment can be found in supplementary materials.
 
-For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with good behaviors) has higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral character (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]} , but we did not find differences between shapes associated with bad character (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
+For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters (``good person'', ``kind person'' or a name associated with good behaviors) have higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral characters (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]}, but we did not find differences between shapes associated with bad characters (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
 
 \begin{figure}
 \centering
@@ -397,9 +397,9 @@ For the \emph{d} prime, results from the Bayesian model revealed a robust effect
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
 \end{figure}
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral character (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad character (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}.
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral characters (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad characters (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}.
 
-For the nonmatch trials, we found the advantage of good character: Shapes associated with good character (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) are faster than shapes associated with neutral (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad character (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 5.20 ms, 95\% HDI {[}-0.04 10.66{]}, but the effect size was smaller than the match trials.
+For the nonmatch trials, we found the advantage of good character: Shapes associated with good characters (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) were faster than shapes associated with neutral characters (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad characters (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) were slower than shapes associated with neutral characters, \(median_{diff}\) = 5.20 ms, 95\% HDI {[}-0.04 10.66{]}, but the effect size was smaller than the match trials.
 
 \hypertarget{modulation-effect-self-referential-processing}{%
 \subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
@@ -425,9 +425,9 @@ Experiments 4a and 4b were designed to test whether the good character and self-
 
 In experiment 4a, where ``self'' vs.~``other'' were task-relevant and moral character were task-irrelevant, we found the ``self'' conditions performed better than the ``other'' conditions for both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}, BF = 4.4) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}, BF = 3.1), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
 
-A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}628 667{]}) were inside. This effect was reversed for the ``other'' condition: RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 754{]}) were slower than those with neutral character (median = 721, 95\% HDI {[}702 741{]}) or bad character (median = 718, 95\% HDI {[}696 740{]}) inside.
+A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}629 667{]}) were inside. This effect was reversed for the ``other'' condition: RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) or bad character (median = 719, 95\% HDI {[}696 740{]}) inside.
 
 \begin{figure}
 \centering
@@ -450,7 +450,7 @@ The current study provided robust evidence for the prioritization of good charac
 
 The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity effect, i.e., information related to bad character is processed preferentially (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli (Pool, Brosch, Delplanque, \& Sander, 2016).
 
-We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the ``self'', even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with ``other''. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized (Hu et al., 2020). More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017) and the motivation to maintain a moral self-view influences how we perceive (e.g., Ma \& Han, 2010) and remember (e.g., Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020 ; Stanley, Henne, \& De Brigard, 2019).
+We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the ``self'', even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with ``other''. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized (Hu et al., 2020). More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017) and the motivation to maintain a moral self-view influences how we perceive (e.g., Ma \& Han, 2010) and remember (e.g., Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley, Henne, \& De Brigard, 2019).
 
 Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view \emph{penetrates} perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules (e.g., Sui, He, Golubickis, Svensson, \& Neil Macrae, 2023), we need computational models and an integrative experimental approach (Almaatouq et al., 2022). For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made (Chuan-Peng et al., 2022; Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory (Shadlen \& Shohamy, 2016). Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
 
