--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction bewteen valence and self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
+ Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -147,11 +147,11 @@ The perceptual decision-making will show certain pattern under certain task dema
 in experiment 4a and 4b, we didn't have a baseline condition where there is no word inside the shape? -->
 
 # Disclosures
-We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
+We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy was lower than 60% were excluded from analyses. Also, accurate responses with less than 200ms reaction times were excluded from the analysis. These excluded data can be found in the shared raw data files.
 
-All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 in Tsinghua University, Beijing, China. Participants in these experiments were recruited in the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants in Wenzhou University, Wenzhou, China, in 2017 for experiment 1a, 1b, 4a, and 4b. Experiment 3b was finished in Wenzhou University in 2017 (See Table 1 for overview of these experiments). 
+All the experiments reported were not pre-registered. Most experiments (1a ~ 4b, except experiment 3b) reported in the current study were first finished between 2013 to 2016 at Tsinghua University, Beijing, China. Participants in these experiments were recruited from the local community. To increase the sample size of experiments to 50 or more [@Simmons_2013_life], we recruited additional participants from Wenzhou University, Wenzhou, China, in 2017 for experiments 1a, 1b, 4a, and 4b. Experiment 3b was finished at Wenzhou University in 2017 (See Table 1 for an overview of these experiments). 
 
-All participants received informed consent and compensated for their time. These experiments were approved by the ethic board in the Department of Psychology, Tsinghua University. 
+All participants received informed consent and were compensated for their time. These experiments were approved by the ethics board in the Department of Psychology, Tsinghua University. 
 
  <!-- 21-word solution (Simmons, Nelson & Simonsohn, 2012; retrieved from http://ssrn.com/abstract=2160588) -->
 
@@ -443,7 +443,7 @@ ll_diff_m1_BN <- df_dprime1_diff_hdi$CI_low[df_dprime1_diff_hdi$Parameter == 'di
 ul_diff_m1_BN <- df_dprime1_diff_hdi$CI_high[df_dprime1_diff_hdi$Parameter == 'diff_BN_dprm']
 ```
 
-For the *d* prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good character ("good person", "kind person" or a name associated with good behaviors) has higher sensitivity (median = `r med_d_m1_good`, 95% HDI = [`r ll_d_m1_good` `r ul_d_m1_good`]) than shapes associated with neutral character (median = `r med_d_m1_neut`, 95% HDI = [`r ll_d_m1_neut` `r ul_d_m1_neut`]), $median_{diff}$ = `r med_diff_m1_GN`, 95% HDI [`r ll_diff_m1_GN` `r ul_diff_m1_GN`] , but we did not find differences between shapes associated with bad character (median = `r med_d_m1_bad`, 95% HDI = [`r ll_d_m1_bad` `r ul_d_m1_bad`]) and neutral character, $median_{diff}$ = `r med_diff_m1_BN`, 95% HDI [`r ll_diff_m1_BN` `r ul_diff_m1_BN`].
+For the *d* prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters ("good person", "kind person" or a name associated with good behaviors) have higher sensitivity (median = `r med_d_m1_good`, 95% HDI = [`r ll_d_m1_good` `r ul_d_m1_good`]) than shapes associated with neutral characters (median = `r med_d_m1_neut`, 95% HDI = [`r ll_d_m1_neut` `r ul_d_m1_neut`]), $median_{diff}$ = `r med_diff_m1_GN`, 95% HDI [`r ll_diff_m1_GN` `r ul_diff_m1_GN`], but we did not find differences between shapes associated with bad characters (median = `r med_d_m1_bad`, 95% HDI = [`r ll_d_m1_bad` `r ul_d_m1_bad`]) and neutral character, $median_{diff}$ = `r med_diff_m1_BN`, 95% HDI [`r ll_diff_m1_BN` `r ul_diff_m1_BN`].
 
 ```{r first meta rt, echo=FALSE, results='hide', warning=FALSE}
 # have a look at a few participants' data
@@ -716,10 +716,9 @@ p_rt1 + p_dprime1 +
 #  ggsave('part1_plot_posterior.png', p, width = 15, height = 7.5)
 ```
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good character has faster responses (median = `r med_rt_m_m1_good` ms, 95% HDI = [`r ll_rt_m_m1_good` `r ul_rt_m_m1_good`]) than shapes associated with neutral character (median = `r med_rt_m_m1_neut` ms, 95% HDI = [`r ll_rt_m_m1_neut` `r ul_rt_m_m1_neut`]), $median_{diff}$ = `r med_diff_rt_m_m1_GN`, 95% HDI [`r ll_diff_rt_m_m1_GN` `r ul_diff_rt_m_m1_GN`]. We also found that RTs to shapes associated with bad character (median = `r med_rt_m_m1_bad` ms, 95% HDI = [`r ll_rt_m_m1_bad` `r ul_rt_m_m1_bad`]) were slower as compared to the neutral character, $median_{diff}$ = `r med_diff_rt_m_m1_BN`, 95% HDI [`r ll_diff_rt_m_m1_BN` `r ul_diff_rt_m_m1_BN`].
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good characters were faster (median = `r med_rt_m_m1_good` ms, 95% HDI = [`r ll_rt_m_m1_good` `r ul_rt_m_m1_good`]) than shapes associated with neutral characters (median = `r med_rt_m_m1_neut` ms, 95% HDI = [`r ll_rt_m_m1_neut` `r ul_rt_m_m1_neut`]), $median_{diff}$ = `r med_diff_rt_m_m1_GN`, 95% HDI [`r ll_diff_rt_m_m1_GN` `r ul_diff_rt_m_m1_GN`]. We also found that RTs to shapes associated with bad characters (median = `r med_rt_m_m1_bad` ms, 95% HDI = [`r ll_rt_m_m1_bad` `r ul_rt_m_m1_bad`]) were slower as compared to the neutral character, $median_{diff}$ = `r med_diff_rt_m_m1_BN`, 95% HDI [`r ll_diff_rt_m_m1_BN` `r ul_diff_rt_m_m1_BN`].
 
-For the nonmatch trials, we found the advantage of good character: Shapes associated with good character (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) are faster than shapes associated with neutral (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), $median_{diff}$ = `r med_diff_rt_nm_m1_GN` ms, 95% HDI [`r ll_diff_rt_nm_m1_GN` `r ul_diff_rt_nm_m1_GN`]. Similarly, the shapes associated with bad character (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) was responded slower than shapes associated with neutral character, $median_{diff}$ = `r med_diff_rt_nm_m1_BN` ms, 95% HDI [`r ll_diff_rt_nm_m1_BN` `r ul_diff_rt_nm_m1_BN`], but the effect size was smaller than the match trials.
-
+For the nonmatch trials, we found the advantage of good character: Shapes associated with good characters (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) were faster than shapes associated with neutral characters (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), $median_{diff}$ = `r med_diff_rt_nm_m1_GN` ms, 95% HDI [`r ll_diff_rt_nm_m1_GN` `r ul_diff_rt_nm_m1_GN`]. Similarly, the shapes associated with bad characters (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) were slower than shapes associated with neutral characters, $median_{diff}$ = `r med_diff_rt_nm_m1_BN` ms, 95% HDI [`r ll_diff_rt_nm_m1_BN` `r ul_diff_rt_nm_m1_BN`], but the effect size was smaller than the match trials.
 
 ```{r model comp for rt, eval = FALSE, echo=FALSE, results='hide' }
 #### model comparison etc, will be in supplementary materials
@@ -1353,6 +1352,8 @@ These results suggested that the prioritization of good character is not solely 
 
 Experiments 4a and 4b were designed to test whether the good character and self-referential processing bind together spontaneously. Because these two experiments have different experimental designs, we model their data separately.   
 
+In experiment 4a, where “self” vs. “other” were task-relevant and moral character were task-irrelevant, we found the “self” conditions performed better than the “other” conditions for both *d* prime and reaction times. This pattern is consistent with previous studies (e.g., @Sui_2012_JEPHPP).
+
 ```{r 4a_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4a'
 exp4a_sdt_m1 <- fun_sdt_val_id(exp_name)
@@ -1439,6 +1440,73 @@ df_exp4a_sdt_hdi <- df_exp4a_sdt_m1_plot %>%
                                        BF = 1,
                                        centrality = "median")
 
+### prepare results to report
+# neutral self
+rep_m_d_exp4a_neut_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_neut_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_neut_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
+# good self
+rep_m_d_exp4a_good_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_good_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_good_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
+# bad self
+rep_m_d_exp4a_bad_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_bad_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_bad_s <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
+# Neutral other
+rep_m_d_exp4a_neut_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_neut_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_neut_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
+# good other
+rep_m_d_exp4a_good_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_good_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_good_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
+# bad other
+rep_m_d_exp4a_bad_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ll_d_exp4a_bad_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+rep_ul_d_exp4a_bad_o <- df_exp4a_sdt_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 3)
+
 # exp4a_sdt_p <- exp4a_sdt_m1 %>%
 #   emmeans::emmeans( ~ ismatch | Identity| Valence) %>%
 #   tidybayes::gather_emmeans_draws() %>%
@@ -1465,10 +1533,6 @@ df_exp4a_sdt_m1_plot_diff <- df_exp4a_sdt_m1_plot %>%
         dplyr::select(term, `.chain`, `.iteration`, `.draw`, `.value`) %>%
         tidyr::pivot_wider(names_from = c(term), values_from = .value) %>%   # long to wide
         dplyr::mutate(
-                # diff_GN_c_S = c_Self_Good - c_Self_Neutral,
-                # diff_BN_c_S = c_Self_Bad - c_Self_Neutral,
-                # diff_GN_c_O = c_Other_Good - c_Other_Neutral,
-                # diff_BN_c_O = c_Other_Bad - c_Other_Neutral,
                 diff_GN_dprm_S = dprime_Self_Good - dprime_Self_Neutral,
                 diff_BN_dprm_S = dprime_Self_Bad - dprime_Self_Neutral,
                 diff_GB_dprm_S = dprime_Self_Good - dprime_Self_Bad,
@@ -1592,6 +1656,8 @@ df_exp4a_dprime1_diff_diff <- df_exp4a_sdt_m1_plot_diff %>%  # difference betwee
                                        centrality = "median")
 ```
 
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = `r rep_m_d_exp4a_good_s`, 95% HDI [`r rep_ll_d_exp4a_good_s` `r rep_ul_d_exp4a_good_s`]) than shapes that have neutral character (median = `r rep_m_d_exp4a_neut_s`, 95% HDI [`r rep_ll_d_exp4a_neut_s` `r rep_ul_d_exp4a_neut_s`]) or bad character (median = `r rep_m_d_exp4a_bad_s`, 95% HDI [`r rep_ll_d_exp4a_bad_s` `r rep_ul_d_exp4a_bad_s`]), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = `r rep_m_d_exp4a_good_o`, 95% HDI [`r rep_ll_d_exp4a_good_o` `r rep_ul_d_exp4a_good_o`]) than had neutral (median = `r rep_m_d_exp4a_neut_o`, 95% HDI [`r rep_ll_d_exp4a_neut_o` `r rep_ul_d_exp4a_neut_o`]) or bad character (median = `r rep_m_d_exp4a_bad_o`, 95% HDI [`r rep_ll_d_exp4a_bad_o` `r rep_ul_d_exp4a_bad_o`]) inside. See Figure \@ref(fig:plot-exp4-all).
+
 ```{r 4a_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4a'
 exp4a_rt_m1 <- fun_rt_val_id(exp_name)
@@ -1675,12 +1741,73 @@ df_exp4a_rt1_hdi <- df_exp4a_m1_plot_rt %>%
                                        test = c("p_direction", "p_significance"),
                                        BF = 1,
                                        centrality = "median")
-# 
-# emm1 <- emmeans::emmeans(exp4a_rt_m1, specs = pairwise ~ Identity | Valence | ismatch)
-# emm1$contrasts %>% summary(infer = TRUE, point.est = mean)
-# 
-# emm2 <- emmeans::emmeans(exp4a_rt_m1, specs = pairwise ~ Valence | Identity | ismatch)
-# emm2$contrasts %>% summary(infer = TRUE, point.est = mean)
+# prepare for reporting results:
+# neutral self
+rep_m_exp4a_rt_neut_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_neut_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_neut_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
+# good self
+rep_m_exp4a_rt_good_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_good_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_good_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
+# bad self
+rep_m_exp4a_rt_bad_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_bad_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_bad_s <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Self") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
+# Neutral other
+rep_m_exp4a_rt_neut_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_neut_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_neut_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Neutral_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
+# good other
+rep_m_exp4a_rt_good_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_good_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_good_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Good_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
+# bad other
+rep_m_exp4a_rt_bad_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(Median) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ll_exp4a_rt_bad_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(CI_low) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+rep_ul_exp4a_rt_bad_o <- df_exp4a_rt1_hdi %>% dplyr::filter(Parameter == "Bad_Other") %>% dplyr::select(CI_high) %>% 
+        dplyr::pull() %>%
+        round(., digits = 0)
+
 
 df_exp4a_m1_plot_rt_diff <- df_exp4a_m1_plot_rt %>%
         # tidyr::unite(term, c('params', 'Identity', 'Valence')) %>%
@@ -1786,12 +1913,7 @@ p2 <- (p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val) + plot_layout(nrow = 1, b
         # p3 +  plot_layout(nrow = 3) 
 ```
 
-In experiment 4a, where “self” vs. “other” were task-relevant and moral character were task-irrelevant, we found the “self” conditions performed better than the “other” conditions for both *d* prime and reaction times. This pattern is consistent with previous studies (e.g., @Sui_2012_JEPHPP).
-
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = 2.83, 95% HDI [2.63 3.01]) than shapes that have neutral character (median = 2.74, 95% HDI [2.58 2.95], BF = 4.4) or bad character (median = 2.76, 95% HDI [2.56 2.95], BF =  3.1), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = 1.87, 95% HDI [1.71 2.04]) than had neutral (median = 1.96, 95% HDI [1.80 2.14]) or bad character (median = 1.98, 95% HDI [1.79 2.17]) inside. See Figure \@ref(fig:plot-exp4-all). 
-
-A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = 641, 95% HDI [623 662]) were faster than when a neutral character (median = 649, 95% HDI [631 668]) or bad character (median = 648, 95% HDI [628 667]) were inside. This effect was reversed for the “other” condition: RTs for shapes associated with good character inside (median = 733, 95% HDI [711 754]) were slower than those with neutral character (median = 721, 95% HDI [702 741]) or bad character (median = 718, 95% HDI [696 740]) inside.
-
+A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) or bad character (median = `r rep_m_exp4a_rt_bad_s`, 95% HDI [`r rep_ll_exp4a_rt_bad_s` `r rep_ul_exp4a_rt_bad_s`]) were inside. This effect was reversed for the “other” condition: RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) or bad character (median =  `r rep_m_exp4a_rt_bad_o`, 95% HDI [`r rep_ll_exp4a_rt_bad_o` `r rep_ul_exp4a_rt_bad_o`]) inside.
 
 ```{r 4b_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
@@ -2082,7 +2204,7 @@ The current study provided robust evidence for the prioritization of good charac
 
 The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity effect, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli [@pool_attentional_2016].
 
-We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the “self”, even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with “other”. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_GoodSelf]. More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020 ;@stanley_remembering_2019]. 
+We expanded previous moral perception studies by focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the “self”, even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with “other”. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_GoodSelf]. More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020;@stanley_remembering_2019]. 
 
 Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_GoodSelf]. Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate [@lockwood_nat_comm_2018]. These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
 
